--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
 						<header class="major">
 							<h2>Who Am I</h2>
 						</header>
-						<p>I am Steffan Chapman, 28 years old, from Orange Beach, Al. I've always had a great interest in programming and leveraging technology to impact individuals across the world. I enjoy the process of learning and collaborating with others to overcome difficult challenges to create great things. I look forward to growing and leveling up in my career as a programmer.  </p>
+						<p>I am Steffan Chapman, 28 years old, from Orange Beach, Al. I'm interested in programming and leveraging technology to impact individuals across the world. I enjoy the process of learning and collaborating with others to overcome difficult challenges to create great things. I look forward to growing and leveling up in my career as a programmer and impacting individuals globally. .  </p>
 					</div>
 					<a href="#two" class="goto-next scrolly">Next</a>
 				</div>
@@ -48,7 +48,7 @@
 						<header class="major">
 							<h2>A Look Into My Work</h2>
 						</header>
-						<p>Im focused on utilizing Python for automation and creating advanced applications that benefit people across the world..</p>
+						<p>I'm interested in utilizing Python to create advanced applications that benefit individuals across the world.</p>
 						<ul class="icons-grid">
 							<li>
 								<span class="icon solid major fa-camera-retro"></span>
@@ -56,7 +56,7 @@
 							</li>
 							<li>
 								<span class="icon solid major fa-pencil-alt"></span>
-								<h3>Portfolio Site</h3>
+								<h3>Flask Server</h3>
 							</li>
 							<li>
 								<span class="icon solid major fa-code"></span>
@@ -80,7 +80,7 @@
 						<header class="major">
 							<h2>Believe In Yourself</h2>
 						</header>
-						<p>I'm highly confident in my abilities to learn anything at an extraordinary paste and create advanced applications over time. I'm new to programming and understand everything I need to learn in order to achieve valuable skills.</p>
+						<p>I'm confident in my abilities to learn and apply new skillsets quickly to overcome challenges and create advanced applications. I am a lifelong learner and will continue to expand my knowledge and skills. I have a strong ability to adapt and thrive in dynamic envirements. My core strength is forward thinking and navigating in a way which is beneficial now and in the future.</p>
 					</div>
 					<a href="#footer" class="goto-next scrolly">Next</a>
 				</div>
